try --user argument to make osgswig available in travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - cmake .. -DCMAKE_BUILD_TYPE=Relase  -DCMAKE_CXX_FLAGS=-fpermissive
   - make -j4
   - cd lib/python/osgswig*
-  - sudo python setup.py install
+  - sudo python setup.py install --user
   - cd $ROOT
   - cd octopy
 install:
